--- a/MorseMachine.html
+++ b/MorseMachine.html
@@ -8,17 +8,22 @@
   	  	<script type="application/javascript" src="https://unpkg.com/react-dom@18.0.0/umd/react-dom.production.min.js"></script>
   	  	<script type="application/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
 	</head>
-	<body style="background-color: #CCCCCC">
+	<body style="background-color: #f7f7f7">
 		<H1 style="color:blue; text-align: center">Morse Machine</H1>
 	<div id="root"></div>
 		<script type="text/babel">
 			class Morse extends React.Component {
+				state = {running: false} 
 				runClick = () => {
+					this.setState(
 
+					)
 				}
 
 				runHold = () => {
+					this.setState(
 
+					)
 				}
 				render() {
 					const {running} = this.state
@@ -44,7 +49,6 @@
 					) 
 				}
 			}
-
 			const element=<Morse />
 			ReactDOM.render(element, document.getElementById("root"));	
 		</script>
