--- a/MorseMachine.html
+++ b/MorseMachine.html
@@ -7,24 +7,38 @@
 		<script type="application/javascript" src="https://unpkg.com/react@18.0.0/umd/react.production.min.js"></script>
   	  	<script type="application/javascript" src="https://unpkg.com/react-dom@18.0.0/umd/react-dom.production.min.js"></script>
   	  	<script type="application/javascript" src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
+		<style>.dot { 
+			height: 25px;
+			width: 25px;
+			background-color: #ccc;
+			border-radius: 50%;
+			display: inline-block;
+		}</style>
 	</head>
 	<body style="background-color: #f7f7f7">
 		<H1 style="color:blue; text-align: center">Morse Machine</H1>
 	<div id="root"></div>
 		<script type="text/babel">
+					const sound = new Audio('beep.mp3');
+						sound.loop = true;
+						soundRefresh.current = sound;
 			class Morse extends React.Component {
 				state = {running: false} 
+
 				runClick = () => {
 					this.setState(
-
+						state => {
+							sound.play();
+							sound.pause();
+						}
 					)
 				}
-
 				runHold = () => {
 					this.setState(
 
 					)
 				}
+				
 				render() {
 					const {running} = this.state
 					
@@ -44,9 +58,10 @@
 					return (
 						<div style={{textAlign: 'center'}}>
 							<label style={labelStyle}>Click for dih, hold for dah</label>
-							<button onClick={this.runClick} onMouseDown={this.runHold} style={buttonStyle}>{running?'Hold':'Click'}</button>
+							<span id='dot'></span>
+							<button onClick ={this.runClick} onMouseDown={this.runHold} style={buttonStyle}>{running?'Hold':'Click'}</button>
 						</div>
-					) 
+					)
 				}
 			}
 			const element=<Morse />
